--- a/Dockerfile.build.alpine
+++ b/Dockerfile.build.alpine
@@ -3,6 +3,9 @@ FROM golang:1.11.2-alpine
 # borrowed with gratitude from confd
 # https://github.com/kelseyhightower/confd/blob/master/Dockerfile.build.alpine?at=09f6676
 
+WORKDIR /app
 RUN apk add --no-cache git
 
-WORKDIR /app
+COPY go.mod /app/go.mod
+COPY go.sum /app/go.sum
+RUN go mod download
